# project-gpuc

./: CMakeLists.txt  ConvolutionLayer.cpp  ConvolutionLayer.h  CudaConvolution.cu  CudaConvolution.cuh  CudaConvolution_16.cu  CudaConvolution_16.cuh  CudaConvolution_32.cu  CudaConvolution_32.cuh  CudaGEMV.cu  CudaGEMV.cuh  FullyConnectedLayer.cpp  FullyConnectedLayer.h  GPUConvolution.cu  GPUConvolution.cuh  GPUtilities.cu  GPUtilities.cuh  Matrix.cpp  Matrix.h  PoolingLayer.cpp  PoolingLayer.h  PoolingLayer_Kolya.h  README.md  SoftmaxLayer.cpp  SoftmaxLayer.h  Tensor.cpp  Tensor.h  main.cpp  matrix.cpp  matrix.h
cnn-weights/: cnn-weights-conv2d.txt  conv-layers-shape.txt  final-cnn-model-summary.txt
cnn-weights-new/: cnn-weights-conv2d_1.txt  cnn-weights-dense_1.txt  cnn-weights-flatten.txt
python/: cifar-10-extract.py
